--- a/Views/Advisor/Ratings/Partials/_UniversitiesPartial.cshtml
+++ b/Views/Advisor/Ratings/Partials/_UniversitiesPartial.cshtml
@@ -2,6 +2,29 @@
 @{
     ViewBag.Title = "_UniversitiesPartial";
 }
-
-<h2>_UniversitiesPartial</h2>
-
+    <div class="container-fluid mt-20 w-80">
+        @for (int i = 1; i <= 10; i++)
+        {
+            <div class="card">
+                <div class="row">
+                    <div class="col-xs-3">
+                        <div class="num mt-20"> #@i</div>
+                    </div>
+                    <div class="col-xs-9">
+                        <a href="@Url.RouteUrl("universities_page", new { id = ViewBag.Universities[i].Id })">
+                            <h3> @ViewBag.Universities[i]</h3>
+                        </a>
+                        <div class="d-flex">
+                            <p class="mr-5">
+                                <i class="fas fa-globe"></i>
+                            </p>
+                            <p>
+                                <a target="_blank" href="@ViewBag.Universities[i].Website"> @ViewBag.Universities[i].Website</a>
+                            </p>
+                        </div>
+                        <p><i class="fas fa-star"></i> 10 / 10</p>
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
