--- a/Assets/css/ratings.css
+++ b/Assets/css/ratings.css
@@ -10,5 +10,16 @@
 
 .w-80 {
     width: 80%;
+    min-width: 100px;
 }
 
+@media only screen and (max-width: 500px) {
+    .num{
+        font-size: 30px;
+        padding-left: 5px;
+    }
+
+    .w-80 {
+        width: 100%;
+    }
+}
