--- a/Views/Advisor/Ratings/Partials/_StudyProgramsPartial.cshtml
+++ b/Views/Advisor/Ratings/Partials/_StudyProgramsPartial.cshtml
@@ -1,20 +1,21 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "_StudyProgramsPartial";
 }
 
 <div class="container-fluid mt-20 w-80">
-    @for (int i = 1; i <= 10; i++)
+    @for (int i = 0; i < 10; i++)
     {
         <div class="card">
             <div class="row">
                 <div class="col-xs-2">
-                    <div class="num mt-20"> #@i</div>
+                    <div class="num mt-20"> #@(i + 1)</div>
                 </div>
                 <div class="col-xs-10">
-                    <a href="#"><h3>Study program</h3></a>
-                    <p><i class="fas fa-graduation-cap"></i> University of...</p>
-                    <p> <i class="fas fa-star"></i> 10 / 10</p>
+                    <a href="@Url.RouteUrl("program_page", new { id = ViewBag.StudyPrograms[i].StudyProgram.Id})">
+                        <h3 class="font-light">@ViewBag.StudyPrograms[i].StudyProgram</h3>
+                    </a>
+                    <p><i class="fas fa-graduation-cap"></i> @ViewBag.StudyPrograms[i].University</p>
+                    <p> <i class="fas fa-star"></i> @ViewBag.StudyPrograms[i].Overal.ToString() / 10</p>
                 </div>
             </div>
         </div>
