--- a/Views/Advisor/Ratings/Partials/_StudyProgramsPartial.cshtml
+++ b/Views/Advisor/Ratings/Partials/_StudyProgramsPartial.cshtml
@@ -5,7 +5,7 @@
 <div class="container-fluid mt-20 w-80">
     @for (int i = 0; i < 10; i++)
     {
-        <div class="card">
+        <div class="new-card">
             <div class="row">
                 <div class="col-xs-2">
                     <div class="num mt-20"> #@(i + 1)</div>
