--- a/Assets/css/university.css
+++ b/Assets/css/university.css
@@ -41,6 +41,19 @@
         padding: 15px 20px 0 20px;
     }
 
+.new-card {
+    border-radius: 3px;
+    margin: 10px;
+    padding: 10px;
+    box-shadow: 3px 5px 15px 2px rgba(0, 0, 0, 0.1);
+}
+
+.new-card:hover {
+    background: #f7f7f7;
+    box-shadow: 3px 5px 15px 2px rgba(0, 0, 0, 0.3);
+    border: 0;
+}
+
 @media only screen and (max-width: 1024px) {
     .university-container {
         width: 100%;
@@ -58,4 +71,36 @@
     .uni-info {
         flex-direction: column;
     }
+}
+
+@media only screen and (max-width: 786px) {
+    .new-card {
+        width: 100%;
+    }
+}
+
+@media (prefers-color-scheme: dark) {
+    body {
+        background-color: black;
+        color: #ccc;
+    }
+
+    .about-section {
+        box-shadow: 3px 5px 15px 2px rgb(128, 128, 128);
+    }
+
+    .dormitory-container {
+        box-shadow: 3px 5px 15px 2px rgb(128, 128, 128);
+    }
+
+    .new-card {
+        border-radius: 3px;
+        margin: 10px;
+        padding: 10px;
+        box-shadow: 3px 5px 15px 2px rgb(128, 128, 128);
+    }
+
+        .new-card:hover {
+            box-shadow: 3px 5px 15px 2px rgb(128, 128, 128);
+        }
 }
