--- a/Assets/css/home.css
+++ b/Assets/css/home.css
@@ -74,6 +74,13 @@
     border-color: white;
 }
 
+input {
+    border-radius: 25px;
+    padding-left: 10px;
+    width: 300px;
+    border-style: hidden;
+}
+
 @media only screen and (max-width: 992px) {
     .home-image {
         margin-top: 30px;
